--- a/src/components/carousel/item/Item.scss
+++ b/src/components/carousel/item/Item.scss
@@ -1,7 +1,11 @@
+@import '../../../scss/mixins.scss';
+
 .item {
     display: flex;
     flex-direction: column;
-    width: 48rem;
+    text-decoration: none;
+
+    @include color--purple;
 
     &-data, &-data--top, &-data--bottom, &-data--left, &-data--right, &-rating {
         display: flex;
@@ -11,7 +15,6 @@
     }
     &-img {
         width: 100%;
-        height: 32rem;
         object-fit: cover;
         border-radius: 24px;
     }
