--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,9 +1,15 @@
+@import '../../scss/mixins.scss';
+
 .header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 4.8rem 9.6rem 1.2rem 9.6rem;
+        padding: 2.4rem 2.4rem 2.4rem 2.4rem;
+    @include mq--desktop {
+        padding: 4.8rem 9.6rem 1.2rem 9.6rem;
+    }
+    @include color--purple;
 }
 .header-stays {
     font-size: 2.4rem;
