--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding: 2.4rem 9.6rem;
     gap: 1.2rem;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid purple;
 
     &-logo, &-filter {
         display: flex;
@@ -12,6 +12,11 @@
         justify-content: space-between;
         gap: 1.2rem;
         font-size: 2.4rem;
+    }
+    &-filter {
+        border: 1px solid purple;
+        border-radius: 2.4rem;
+        padding: 1.2rem 2.4rem;
     }
 }
 
